fix: missing scrollbar when too many hosts are listed in the dropdown menu.

--- a/munin2/static/dynatempl3.css
+++ b/munin2/static/dynatempl3.css
@@ -14,6 +14,12 @@
 	margin-left: 0.5em;
 }
 
+.dropdown-menu {
+    max-height: 500px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 #generated {
 	margin-top: 7px;
 	padding: 3px;
